[package]
name = "rustnet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["default","sync","rt-multi-thread","macros","time","net","io-util"] }
thiserror = "1.0.38"
async-trait = "0.1.64"
futures = "0.3.26"
static_init = "1.0.3"
wg = {version = "0.4.2",features = ["async"]}

